reduced font size to avoid wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,12 @@ body, html {
 
 body {
     background: #fff;
-    font: 18px/1.5 'Verdana', sans-serif;
+    font: 12 'Verdana', sans-serif;
 }
 
 
 #tooltip {
-  font-family: 'Verdana', san-serif;
+  font-family: 'Verdana', sans-serif;
   color:#000000;
   font-size:15px;
 }
@@ -47,5 +47,6 @@ body {
 	width: 20%;
 	margin: 0 2%;
 	text-align: center;
-  font-size:15px;
+  font-family: 'Verdana', sans-serif;
+  font-size:14px;
 }
